--- a/canvas/style.css
+++ b/canvas/style.css
@@ -10,13 +10,13 @@ body{
      overflow: hidden;
      
      display: grid;
-     grid-template-columns: 1fr max-content;
-     gap: 25px;
+     grid-template-columns: 1fr min-content;
 }
 
 .canvas{
      height: 100vh;
-     width: calc(100vw - 50rem);
+     grid-column: 1/2;
+     width: 100%;
 }
 
 .sidebar{
@@ -40,11 +40,16 @@ body{
 
 .colors > *{
      height: 5rem;
+     border: 3px solid rgba(0, 0, 0, 0);
      width: 5rem;
      background-color: black;
-     border: 3px solid rgba(0, 0, 0, 0.25);
      border-radius: 100px;
-
+     box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+     
+}
+.colors > *:hover{
+     border: 3px solid rgba(0, 0, 0, 0.25);
+     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.5);
 }
 
 .color-black{ 
@@ -61,6 +66,7 @@ body{
 .color-aquamarine{ background-color: aquamarine;}
 .color-orange{ background-color: orange;}
 .color-olive{ background-color: olive;}
+.color-chocolate{ background-color: chocolate;}
 .color-orangered{ background-color: orangered;}
 .color-violet{ background-color: violet;}
 .color-purple{ background-color: purple;}
@@ -70,41 +76,51 @@ body{
 .color-yellowgreen{ background-color: yellowgreen;}
 .color-antiquewhite{ background-color: antiquewhite;}
 .color-gold{ background-color: gold;}
-.color-rainbow{ background-image: linear-gradient(to right, red,magenta, blue, cyan, green, yellow, red);}
+.color-rainbow{ background-image: linear-gradient(to right, red, blue, green);}
 
 .color_active{
-     border: 5px solid rgba(36, 36, 36, 0.5);
+     border: 3px solid rgba(117, 117, 117, 0.75);
 }
-
 
 .inputs{
      display: flex;
      flex-direction: column;
      align-items: center;
-     gap: 2rem;
 }
 
+.inputs > figure{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+}
 
 .input_color{
      border: none;
-     height: 5rem;
-     width: 5rem;
-     background: transparent;
+     height: 7.5rem;
+     width: 7.5rem;
+     background-image: linear-gradient(to right, red,magenta, blue, cyan, green, yellow, red);
+     display: block;
+     margin-bottom: 1rem;
+}
+.input_text{
+     font-size: 1.75rem;
+     text-align: center;
+     font-weight: 500;
 }
 
 .input_line {
      height: 26px;
      appearance: none;
-     margin: 10px 0;
+     margin: 15px 0;
      width: 100%;
      background-color: transparent;
 }
 .input_line:focus {
      outline: none;
 }
- .input_line::-webkit-slider-runnable-track {
+.input_line::-webkit-slider-runnable-track {
      width: 150%;
-     height: 14px;
+     height: 10px;
      cursor: pointer;
      box-shadow: 1px 1px 1px #50555C;
      background: #27446d;
@@ -115,10 +131,10 @@ body{
      box-shadow: 0px 0px 0px #000000;
      border: 0px solid #000000;
      height: 20px;
-     width: 40px;
+     width: 20px;
      border-radius: 12px;
      background: #529DE1;
      cursor: pointer;
      -webkit-appearance: none;
-     margin-top: -3px;
+     margin-top: -5px;
 }
