--- a/rock_paper_scissors/style.css
+++ b/rock_paper_scissors/style.css
@@ -38,6 +38,7 @@ body {
   border: 5px solid transparent;
   background-color: whitesmoke;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
 }
 
 .icon:hover {
@@ -50,7 +51,7 @@ body {
 }
 
 .results {
-  width: 50%;
+  width: 100%;
   height: 15rem;
   margin: 5rem auto;
   text-transform: uppercase;
@@ -65,6 +66,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: all 0.2s;
   margin: 0;
 }
 
@@ -75,7 +77,7 @@ body {
 .reset_btn {
   height: 10rem;
   width: 10rem;
-  cursor: pointer;
+  cursor: alias;
   margin: 2rem 2rem;
   padding: 2.5rem;
   text-align: center;
@@ -90,6 +92,7 @@ body {
 }
 
 .border_1 {
+  transition: all 0.2s;
   border: 5px solid rgba(43, 191, 236, 0.5);
 }
 .border_2 {
