--- a/trivia/style.css
+++ b/trivia/style.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Trebuchet MS", sans-serif;
-  height: max-content;
+  min-height: 100vh;
   width: 100vw;
   background-image: linear-gradient(
     to right bottom,
@@ -16,11 +16,12 @@ body {
   );
   background-size: contain;
   background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 
 section {
   width: 75%;
-  height: 100%;
+  min-height: 100vh;
   background-color: rgba(245, 245, 245, 0.9);
   margin: 0 auto;
   padding: 5rem;
@@ -32,28 +33,43 @@ section {
   font-size: 2.5rem;
   margin: 0;
 }
+
+.text {
+  text-align: center;
+  font-size: 1.6rem;
+}
 .score {
   text-align: end;
   font-size: 1.8rem;
   font-weight: 600;
   margin: 2rem;
   text-transform: uppercase;
+  border-bottom: 3px solid rgb(78, 77, 28);
+  padding-bottom: 2rem;
+}
+
+.all_questions {
+  padding: 0 15rem;
 }
 
 .question {
   font-size: 2rem;
   margin: 5rem auto 0;
+  font-weight: 600;
 }
 
 .answers {
-  font-size: 1.7rem;
+  font-weight: 400;
+  font-size: 1.6rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  column-gap: 5rem;
 }
-
-.answer {
-  width: max-content;
+.answers > p {
   padding: 1rem 2rem;
+  width: fit-content;
+}
+.answer {
   cursor: pointer;
 }
 
