--- a/weather_app/style.css
+++ b/weather_app/style.css
@@ -99,7 +99,7 @@ body {
 .weather_icon {
   position: absolute;
   top: -8.5rem;
-  right: 0.5rem;
+  right: 0rem;
   z-index: 0;
   height: 25rem;
   width: 25rem;
@@ -147,4 +147,15 @@ body {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+.hidden {
+  display: none;
+}
+.text {
+  text-align: center;
+  grid-column: 1 / -1;
+  font-size: 1.6rem;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
 }
