--- a/style.css
+++ b/style.css
@@ -35,13 +35,12 @@ body {
   justify-self: center;
   justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
-  gap: 2rem;
+  row-gap: 4rem;
   margin: 5rem auto;
 }
 
 .link {
   width: 30rem;
-  /* height: 30rem; */
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2);
   border-radius: 1rem;
   overflow: hidden;
