--- a/calculator/style.css
+++ b/calculator/style.css
@@ -3,6 +3,10 @@
   src: url("./Digital7-rg1mL.ttf");
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -11,8 +15,52 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+  background-image: linear-gradient(to right bottom, #f8b195, #f67280, #c06c84);
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  color: white;
 }
 
-* {
-  box-sizing: border-box;
+.heading {
+  text-align: center;
+  font-size: 4.2rem;
+}
+
+.calculator {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+  width: 25vw;
+  height: 75vh;
+  border-radius: 2.5rem;
+  margin: 0 auto;
+  padding: 3.5rem;
+  background-color: rgb(37, 33, 33);
+
+  justify-items: center;
+  align-items: center;
+}
+
+.display {
+  background-color: #705c45;
+  width: 100%;
+  height: 100%;
+  font-family: Digital-7;
+  grid-column: 1/ -1;
+  border-radius: 1rem;
+  font-size: 2rem;
+}
+
+.numbers {
+  /* order: -1; */
+  font-size: 2rem;
+  font-weight: 600;
+  background-color: #c06c84;
+  width: 100%;
+  border-radius: 2rem;
+  text-align: center;
+  vertical-align: text-bottom;
+  text-transform: uppercase;
+  cursor: pointer;
 }
