--- a/calculator/style.css
+++ b/calculator/style.css
@@ -25,42 +25,88 @@ body {
 .heading {
   text-align: center;
   font-size: 4.2rem;
+  text-transform: uppercase;
 }
 
 .calculator {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   gap: 2rem;
   width: 25vw;
   height: 75vh;
   border-radius: 2.5rem;
   margin: 0 auto;
   padding: 3.5rem;
-  background-color: rgb(37, 33, 33);
-
-  justify-items: center;
-  align-items: center;
+  background-color: #705c45;
+  box-shadow: 0 0 2.5rem rgba(0, 0, 0, 0.75);
+  border: 5px #9e9181;
+  border-style: groove ridge ridge groove;
 }
 
 .display {
-  background-color: #705c45;
+  background-color: #9e9181;
   width: 100%;
   height: 100%;
   font-family: Digital-7;
+  grid-row: 1 /3;
   grid-column: 1/ -1;
   border-radius: 1rem;
-  font-size: 2rem;
+  font-size: 3.2rem;
+  padding: 2rem;
+  color: #000;
+  box-shadow: 0 0 1rem black inset;
+}
+
+.input1 {
+  height: 30%;
+}
+
+.input2 {
+  height: 30%;
+  border-bottom: 2px solid black;
+  margin-bottom: 1rem;
+  position: relative;
+}
+.input2 span {
+  position: absolute;
+  right: 0.5rem;
+  font-weight: 600;
+}
+.result {
+  height: 40%;
+  text-align: end;
+  font-size: 4rem;
+  font-weight: 600;
 }
 
 .numbers {
-  /* order: -1; */
-  font-size: 2rem;
+  font-size: 2.8rem;
   font-weight: 600;
   background-color: #c06c84;
   width: 100%;
+  height: 100%;
   border-radius: 2rem;
   text-align: center;
-  vertical-align: text-bottom;
+  line-height: 1;
   text-transform: uppercase;
   cursor: pointer;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
+  padding: 1.5rem 0;
+  border: 5px outset rgba(0, 0, 0, 0.25);
+}
+
+.double {
+  grid-row: 6 /-1;
+  grid-column: 4/ -1;
+  padding-top: 6rem;
+}
+
+.numbers:hover {
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+}
+.numbers:active {
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.2);
+  transform: translateY(0.1rem);
 }
