--- a/calculator/style.css
+++ b/calculator/style.css
@@ -57,6 +57,7 @@ body {
   color: #000;
   box-shadow: 0 0 1rem black inset;
   overflow: hidden;
+  position: relative;
 }
 
 .input1 {
@@ -67,11 +68,10 @@ body {
   height: 30%;
   border-bottom: 2px solid black;
   margin-bottom: 1rem;
-  position: relative;
 }
-.input2 span {
+.operator {
   position: absolute;
-  right: 0.5rem;
+  right: 2.5rem;
   font-weight: 600;
 }
 .result {
