--- a/calculator/style.css
+++ b/calculator/style.css
@@ -57,6 +57,7 @@ body {
   color: #000;
   box-shadow: 0 0 1rem black inset;
   overflow: hidden;
+  border: 5px inset rgba(0, 0, 0, 0.35);
   position: relative;
 }
 
