--- a/calculator/style.css
+++ b/calculator/style.css
@@ -96,6 +96,7 @@ body {
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
   padding: 1.5rem 0;
   border: 5px outset rgba(0, 0, 0, 0.25);
+  transition: all 100ms;
 }
 
 .double {
@@ -109,6 +110,7 @@ body {
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
 }
 .numbers:active {
-  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.25);
   transform: translateY(0.1rem);
+  transform: scale(0.99);
 }
