--- a/calculator/style.css
+++ b/calculator/style.css
@@ -39,7 +39,7 @@ body {
   margin: 0 auto;
   padding: 3.5rem;
   background-color: #705c45;
-  box-shadow: 0 0 2.5rem rgba(0, 0, 0, 0.75);
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.75);
   border: 5px #9e9181;
   border-style: groove ridge ridge groove;
 }
