--- a/calculator/style.css
+++ b/calculator/style.css
@@ -93,10 +93,11 @@ body {
   line-height: 1;
   text-transform: uppercase;
   cursor: pointer;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0);
   padding: 1.5rem 0;
   border: 5px outset rgba(0, 0, 0, 0.25);
   transition: all 100ms;
+  user-select: none;
 }
 
 .double {
@@ -105,12 +106,7 @@ body {
   padding-top: 6rem;
 }
 
-.numbers:hover {
-  transform: translateY(-0.1rem);
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
-}
 .numbers:active {
-  box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0);
   transform: translateY(0.1rem);
-  transform: scale(0.99);
 }
