--- a/calculator/style.css
+++ b/calculator/style.css
@@ -93,7 +93,7 @@ body {
   line-height: 1;
   text-transform: uppercase;
   cursor: pointer;
-  box-shadow: 0 0 0.5rem rgba(0, 0, 0);
+  box-shadow: 0.25rem 0.25rem 0.5rem rgba(0, 0, 0);
   padding: 1.5rem 0;
   border: 5px outset rgba(0, 0, 0, 0.25);
   transition: all 100ms;
