--- a/ping_pong/style.css
+++ b/ping_pong/style.css
@@ -1,11 +1,78 @@
+:root {
+  --position: 50;
+}
+
 html {
   font-size: 62.5%;
-  box-sizing: border-box;
 }
 
 body {
   padding: 0;
   margin: 0;
   background-color: #336666;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.head {
+  text-align: center;
+  color: aliceblue;
+  text-transform: uppercase;
+  user-select: none;
+  margin: 1rem auto;
+  height: 10vh;
+  opacity: 0.5;
+}
+.heading {
+  font-family: sans-serif;
+  color: aliceblue;
+  text-transform: uppercase;
+  font-size: 3.2rem;
+  margin: 0rem;
+}
+.scores {
+  text-align: center;
+  font-size: 4.8rem;
+  padding: 0 2rem;
+  font-weight: bold;
+}
+
+.divider {
+  position: absolute;
+  top: 10vh;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 80vh;
+  border-right: 0.25rem solid white;
+}
+
+.ball {
+  --x: 50;
+  --y: 50;
+
+  height: 2vw;
+  width: 2vw;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(var(--x) * 1vh);
+  left: calc(var(--y) * 1vw);
+  transform: translate(-50%, -50%);
+}
+
+.paddle {
+  height: 12.5vh;
+  width: 1vw;
+  background-color: white;
+  position: absolute;
+  top: calc(var(--position) * 1vh);
+}
+
+.paddle.right {
+  left: 1.5vw;
+}
+.paddle.left {
+  right: 1.5vw;
 }
