--- a/style.css
+++ b/style.css
@@ -19,6 +19,16 @@ body {
 }
 .heading_2 {
   text-align: center;
+  font-size: 2.8rem;
+  font-weight: 700;
+  margin: 1rem;
+  background: linear-gradient(to left bottom, #e25e3a, #eca138);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.heading_3 {
+  text-align: center;
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 700;
