--- a/canvasTest/style.css
+++ b/canvasTest/style.css
@@ -1,20 +1,10 @@
-html {
-  font-size: 65.2%;
-}
-
 body {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   overflow: hidden;
-
-  display: grid;
-  grid-template-columns: 1fr min-content;
 }
 
 .canvas {
-  height: 100vh;
-  width: 100%;
-  background-color: aqua;
+  border: 1.5px solid black;
+  box-sizing: border-box;
 }
